--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mui/material-next": "^6.0.0-alpha.107",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-scroll": "^1.9.0",
+    "react-toastify": "^9.1.3",
     "react-vertical-timeline-component": "^3.6.0"
   },
   "devDependencies": {
